Redraw icon to match user reference: Bold Blocky Bauhaus Style

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>디자인지그 모바일 (최신 버전)</title>
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icons/icon-192.png?v=bauhaus_v2">
-    <link rel="apple-touch-icon" href="icons/apple-touch-icon-180.png?v=bauhaus_v2">
-    <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon-120.png?v=bauhaus_v2">
-    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-touch-icon-152.png?v=bauhaus_v2">
-    <link rel="apple-touch-icon" sizes="167x167" href="icons/apple-touch-icon-167.png?v=bauhaus_v2">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180.png?v=bauhaus_v2">
+    <link rel="icon" type="image/png" href="icons/icon-192.png?v=bauhaus_ref">
+    <link rel="apple-touch-icon" href="icons/apple-touch-icon-180.png?v=bauhaus_ref">
+    <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon-120.png?v=bauhaus_ref">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-touch-icon-152.png?v=bauhaus_ref">
+    <link rel="apple-touch-icon" sizes="167x167" href="icons/apple-touch-icon-167.png?v=bauhaus_ref">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180.png?v=bauhaus_ref">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
