--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>디자인지그 통합 관리 시스템</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png?v=bauhaus_ref">
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png?v=bauhaus_ref">
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png?v=bauhaus_ref">
-    <link rel="manifest" href="manifest.json?v=bauhaus_ref">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png?v=final_img">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png?v=final_img">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png?v=final_img">
+    <link rel="manifest" href="manifest.json?v=final_img">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
